# LowLevelLearning

./: CMakeLists.txt  imgui.ini  imgui_app
include/: Application.h  GUIElements.h  Renderer.h  Shader.h  Window.h  imconfig.h
include/Components/: Component.h  Mesh.h
include/Interfaces/: GraphicsAPIInterface.h  RenderInterface.h
scripts/: clean.cmake
src/: Application.cpp  GUIElements.cpp  Window.cpp  main.cpp
test/: CmakeLists.txt  WindowTest.cpp
